--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,8 +26,16 @@
 
 
 [[constraint]]
+  name = "github.com/golang/snappy"
+  revision = "553a641470496b2327abcac10b36396bd98e45c9"
+
+[[constraint]]
   name = "github.com/stretchr/testify"
   version = "1.2.1"
+
+[[constraint]]
+  name = "golang.org/x/crypto"
+  revision = "4ec37c66abab2c7e02ae775328b2ff001c3f025a"
 
 [prune]
   go-tests = true
